# cheetah_inekf_lcm

./: .gitignore  CMakeLists.txt  README.md  bias_vs_time_trial_2.txt  cheetah_inekf_pose_kitti.txt  cheetah_inekf_pose_kitti_trial_2.txt  cheetah_inekf_pose_kitti_trial_3.txt  cheetah_inekf_pose_tum.txt  cheetah_inekf_pose_tum_trial_1.txt  cheetah_inekf_pose_tum_trial_3.txt
config/: settings.yaml  settings_template.yaml  txt_readin.yaml
documents/: Apply TensorRT (Cpp API) on an ONNX model.md  Convert a PyTorch Model to an ONNX model.md
include/communication/: lcm_handler.hpp
include/communication/lcm-types/cheetah_inekf_lcm/: pose_lcmt.hpp  pose_t.hpp  reinitialization_lcmt.hpp
include/core/: InEKF.h
include/estimator/: body_estimator.hpp
include/system/: cheetah_state.hpp  cheetah_system.hpp
include/utils/: cheetah_data_t.hpp  measurement.h
lcm/: pose_lcmt.lcm  pose_t.lcm  reinitialization_lcmt.lcm
lcm/cheetah_inekf_lcm/: __init__.py  pose_t.hpp  pose_t.py  reinitialization_lcmt.py
recorded_data/: bias_vs_time_trial_0.txt  bias_vs_time_trial_1.txt  bias_vs_time_trial_3.txt  bias_vs_time_trial_4.txt  bias_vs_time_trial_5.txt  bias_vs_time_trial_6.txt  bias_vs_time_trial_7.txt  bias_vs_time_trial_8.txt  bias_vs_time_trial_9.txt  cheetah_inekf_pose_kitti_trial_0.txt  cheetah_inekf_pose_kitti_trial_1.txt  cheetah_inekf_pose_kitti_trial_4.txt  cheetah_inekf_pose_kitti_trial_5.txt  cheetah_inekf_pose_kitti_trial_6.txt  cheetah_inekf_pose_kitti_trial_7.txt  cheetah_inekf_pose_kitti_trial_8.txt  cheetah_inekf_pose_kitti_trial_9.txt  cheetah_inekf_pose_tum_trial_0.txt  cheetah_inekf_pose_tum_trial_2.txt  cheetah_inekf_pose_tum_trial_4.txt  cheetah_inekf_pose_tum_trial_5.txt  cheetah_inekf_pose_tum_trial_6.txt  cheetah_inekf_pose_tum_trial_7.txt  cheetah_inekf_pose_tum_trial_8.txt  cheetah_inekf_pose_tum_trial_9.txt  quat_in_trial_5.txt  quat_in_trial_9.txt
src/: cheetah_estimator.cpp
src/communication/: lcm_handler.cpp
src/core/: InEKF.cpp
src/estimator/: body_estimator.cpp
src/system/: cheetah_state.cpp  cheetah_system.cpp
